[package]
name = "myblog"
version = "0.1.0"
authors = ["Administrator <ziyoulu1993@163.com>"]
edition = "2018"

[dependencies]
actix-web = "1.0.5"
serde_json = "1.0.40"
http = "0.1.18"
actix-session = "0.2.0"
bytes = "0.4.12"
rocket = {git="https://github.com/SergioBenitez/Rocket"}
rocket_contrib = {git="https://github.com/SergioBenitez/Rocket"}