[package]
name = "myblog"
version = "0.1.0"
authors = ["Administrator <ziyoulu1993@163.com>"]
edition = "2018"

[dependencies]
actix-web = "1.0.5"
actix-files = "0.1.4"
actix-session = "0.2.0"
bytes = "0.4.12"
futures = "0.1.28"
ring = "0.14.6"
actix-rt = "0.2.4"
env_logger = "0.6.2"
diesel = { version = "^1.1.0", features = ["sqlite", "r2d2", "numeric"] }
r2d2 = "0.8"
serde_derive = "1.0.99"
serde = "1.0.99"
serde_json = "1.0.40"
diesel-derive-more = "1.1.3"
diesel_cli_ext = "0.2.3"

