[package]
name = "myblog"
version = "0.1.0"
authors = ["Administrator <ziyoulu1993@163.com>"]
edition = "2018"

[dependencies]
actix-web = "1.0.0"

bytes = "0.4"
env_logger = "0.6"
futures = "0.1"
uuid = { version = "0.5", features = ["serde", "v4"] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

diesel = { version = "^1.1.0", features = ["sqlite", "r2d2"] }
r2d2 = "0.8"
dotenv = "0.10"
actix-session = "0.2.0"
actix-files = "0.1.4"
actix-rt = "0.2.4"

